--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect": "^3.7.0",
+    "cookie": "^0.7.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "express-session": "^1.18.0",
-    "sqlite3": "^5.1.7"
+    "express": "^4.21.0",
+    "express-session": "^1.0.0",
+    "firebase": "^11.0.1",
+    "firebase-admin": "^12.7.0",
+    "mime": "^4.0.4",
+    "multer": "^1.4.5-lts.1",
+    "qs": "^6.13.0",
+    "sqlite3": "^5.1.7",
+    "uid2": "^1.0.0"
   }
 }
