--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.0.0",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.7.0",
+    "https-proxy-agent": "^7.0.5",
     "mime": "^4.0.4",
     "multer": "^1.4.5-lts.1",
     "qs": "^6.13.0",
